--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,21 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}  # Use the environment variable
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}  # Use the environment variable
-      POSTGRES_DB: ${POSTGRES_DB}  # Use the environment variable
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db_data:/var/lib/postgresql/data  # Persist data in a volume
+      - db_data:/var/lib/postgresql/data
 
   web:
     build: .
     ports:
       - "5000:5000"
     environment:
-      DATABASE_URL: ${DATABASE_URL}  # Use the environment variable
+      DATABASE_URL: ${DATABASE_URL}
     depends_on:
       - db
 
 volumes:
-  db_data:  # This defines the volume for persistent storage
+  db_data:
